# Parselo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  vgdump.txt
include/: app.hh
include/components/: about.hh  contextual_menu.hh  headerbar_menu.hh  preferences.hh  toolbar.hh
include/components/buttons/: decobutton.hh
include/parselo/containers/: about.hh  inquiry.hh  preferences.hh
include/parselo/layouts/: about.hh  inquiry.hh  layout.hh  preferences.hh
include/parselo/top_level/: app_window.hh  window.hh
src/: app.cc  main.cc
src/components/: contextual_menu.cc  inquiry.cc  preferences.cc  starter.cc  toolbar.cc
src/components/buttons/: decobutton.cc
src/containers/: about.cc  inquiry.cc  preferences.cc
src/gui/: CMakeLists.txt
src/gui/headers/components/: about.hh  decobutton.hh  inquiry.hh  preferences.hh  starter.hh
src/gui/headers/components/buttons/: decobutton.hh
src/gui/headers/containers/: preferences.hh
src/gui/headers/top_level/: app_window.hh
src/gui/headers/windows/: app_window.hh  appwindow.hh
src/gui/resources/: parselo.gresource.xml
src/gui/resources/bundle/uixml/: toolbar.ui  toolbar_model.ui
src/gui/sources/: app.cc
src/gui/sources/components/: about.cc  decobutton.cc  headerbar_menu.cc  inquiry.cc  preferences.cc
src/gui/sources/components/buttons/: decobutton.cc
src/gui/sources/components/nb_pages/: about.cc  inquiry.cc  preferences.cc
src/gui/sources/components/notebooks/pages/: about.cc  inquiry.cc  preferences.cc
src/gui/sources/containers/: about.cc  decobutton.cc  inquiry.cc  preferences.cc
src/gui/sources/top_level/: app_window.cc
src/gui/sources/windows/: app_window.cc
src/layouts/: about.cc  about.hh  inquiry.cc  inquiry.hh  layout.cc  preferences.cc  preferences.hh
src/resources/bundle/: parselo.desktop.in
src/resources/bundle/uixml/: about.ui  headerbar_menu.ui  shortcuts.ui  window.ui  window_menu.ui
src/top_level/: app_window.cc  window.cc
src/windows/: appwindow.cc
test/: CMakeLists.txt
test/unit_tests/: main.cc  main_window.cc
